--- a/app/src/main/res/layout/activity_icon_edu.xml
+++ b/app/src/main/res/layout/activity_icon_edu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,19 +9,22 @@
     android:background="@color/bgColor1">
 
     <LinearLayout
-        android:layout_marginTop="0dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/mainNavigationView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <View
                 android:id="@+id/icon_green"
                 android:layout_width="match_parent"
-                android:layout_height="167dp"
+                android:layout_height="175dp"
                 android:background="@color/eduColor1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -36,8 +39,8 @@
                 android:textColor="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="19dp"
-                android:layout_marginStart="32dp"/>
+                android:paddingTop="19dp"
+                android:paddingStart="24dp"/>
 
             <TextView
                 android:id="@+id/iconedu_tool_2"
@@ -50,38 +53,48 @@
                 android:letterSpacing="-0.01"
                 app:layout_constraintTop_toBottomOf="@id/iconedu_tool"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="7dp"
-                android:layout_marginStart="32dp"/>
+                android:paddingStart="24dp"
+                android:paddingTop="6dp"/>
 
             <ImageView
                 android:id="@+id/searchIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:paddingStart="24dp"
+                android:layout_marginEnd="0dp"
+                android:paddingEnd="24dp"
                 android:src="@drawable/search_bar"
                 app:layout_constraintTop_toBottomOf="@id/iconedu_tool_2"
-                app:layout_constraintStart_toStartOf="@id/iconedu_tool_2"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                />
+
+
+
 
             <ImageView
                 android:layout_width="26dp"
                 android:layout_height="26dp"
-                android:src="@drawable/ic_search_black_24dp"
-                app:layout_constraintTop_toTopOf="@id/searchIcon"
-                app:layout_constraintStart_toStartOf="@id/searchIcon"
+                android:layout_marginStart="34dp"
                 android:layout_marginTop="7dp"
-                android:layout_marginStart="23dp"/>
+                android:src="@drawable/ic_search_black_24dp"
+                app:layout_constraintStart_toStartOf="@id/searchIcon"
+                app:layout_constraintTop_toTopOf="@id/searchIcon" />
 
             <EditText
                 android:id="@+id/search_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/searchIcon"
-                app:layout_constraintStart_toStartOf="@id/searchIcon"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="7dp"
+                android:background="@null"
                 android:fontFamily="@font/pretendard_regular"
-                android:textSize="18sp"
-                android:textColor="#B3000000"
                 android:hint="검색해주세요"
-                android:layout_marginStart="64dp"/>
+                android:textColor="#B3000000"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="@id/searchIcon"
+                app:layout_constraintTop_toTopOf="@id/searchIcon" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -93,4 +106,16 @@
 
     </LinearLayout>
 
-</LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/mainNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:itemBackground="@color/white"
+        app:itemIconTint="@drawable/menu_click_color"
+        app:itemTextColor="@drawable/menu_click_color"
+        app:menu="@menu/main_navi_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
