--- a/app/src/main/res/layout/activity_default_app_add.xml
+++ b/app/src/main/res/layout/activity_default_app_add.xml
@@ -108,11 +108,13 @@
             android:layout_gravity="start"
             android:gravity="start"
             android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
             android:padding="5dp">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_gravity="start"
                 android:src="@drawable/menu3" />
 
