--- a/app/src/main/res/layout/activity_default_menu2.xml
+++ b/app/src/main/res/layout/activity_default_menu2.xml
@@ -109,7 +109,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -125,8 +127,8 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/screen_app1" />
 
                 <TextView
@@ -145,8 +147,8 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/screen_app2" />
 
                 <TextView
@@ -165,8 +167,8 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/screen_app3" />
 
                 <TextView
@@ -185,8 +187,8 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/screen_app4" />
 
                 <TextView
@@ -213,8 +215,8 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/screen_app5" />
 
                 <TextView
@@ -233,8 +235,8 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/screen_app6" />
 
                 <TextView
@@ -253,8 +255,8 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/screen_app7" />
 
                 <TextView
@@ -273,8 +275,8 @@
                 android:padding="5dp">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:src="@drawable/screen_app8" />
 
                 <TextView
@@ -298,8 +300,8 @@
             android:padding="5dp">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_gravity="start"
                 android:src="@drawable/menu3" />
 
