--- a/app/src/main/res/layout/fragment_screenmove_bar.xml
+++ b/app/src/main/res/layout/fragment_screenmove_bar.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이전"
+        android:fontFamily="@font/pretendard_semibold"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
