--- a/app/src/main/res/layout/activity_check_my_result.xml
+++ b/app/src/main/res/layout/activity_check_my_result.xml
@@ -310,6 +310,7 @@
                             android:layout_width="20dp"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/textViewAverageTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
@@ -337,6 +338,7 @@
                             android:layout_width="20dp"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/textViewTodayTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
