--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -71,13 +71,15 @@
                         android:src="@drawable/character" />
 
                     <TextView
+                        android:id="@+id/textViewName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="추민영"
+                        android:text="이름"
                         android:textColor="@color/black"
                         android:textSize="20dp"
                         android:textStyle="bold" />
+
 
                     <LinearLayout
                         android:layout_width="wrap_content"
