--- a/app/src/main/res/layout/fragment_register_nickname.xml
+++ b/app/src/main/res/layout/fragment_register_nickname.xml
@@ -41,15 +41,15 @@
 
     <Button
         android:id="@+id/btnRegister"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
-        android:background="#FFFFFF"
+        android:background="#ffffff"
         android:padding="5dp"
         android:text="회원가입"
-        app:layout_constraintTop_toBottomOf="@id/editTextNick"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextNick" />
 
     <TextView
         android:id="@+id/textView180"
