--- a/app/src/main/res/layout/fragment_register_password.xml
+++ b/app/src/main/res/layout/fragment_register_password.xml
@@ -41,10 +41,10 @@
 
     <Button
         android:id="@+id/btnNext_Password"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
-        android:background="#FFFFFF"
+        android:background="#ffffff"
         android:padding="5dp"
         android:text="확인"
         app:layout_constraintEnd_toEndOf="parent"
