--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="coral">#F88379</color>
+    <color name="ivory">#EFEDE7</color>
     <color name="light_grey">#C0C0C0</color>
     <color name="lime">#33FF00</color>
     <color name="reddish_orange">#EF5650</color>
+    <color name="salmon">#D25A5A</color>
     <color name="white">#FFFFFF</color>
 
     <color name="transparent_black_50">#80000000</color>
