--- a/app/src/main/res/layout/activity_exam_result_list.xml
+++ b/app/src/main/res/layout/activity_exam_result_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".learning_space.activity.ExamResultFragment"
+    tools:context=".learning_space.fragment.ExamResultFragment"
     android:background="@color/ivory">
 
     <LinearLayout
