--- a/app/src/main/res/layout/fragment_exam_result.xml
+++ b/app/src/main/res/layout/fragment_exam_result.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".learning_space.activity.ExamResultFragment"
+    tools:context=".learning_space.fragment.ExamResultFragment"
     android:background="@color/ivory">
 
     <FrameLayout
@@ -65,10 +65,10 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:layout_marginLeft="64dp"
         android:layout_marginRight="64dp"
         app:layout_constraintTop_toBottomOf="@id/count_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
