--- a/app/src/main/res/layout/activity_screen_home.xml
+++ b/app/src/main/res/layout/activity_screen_home.xml
@@ -5,7 +5,8 @@
     android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/screenedu_background">
+    android:background="@drawable/screenedu_background"
+    tools:context=".edu_space.screen_layout.ScreenHomeActivity">
 
     <include
         android:id="@+id/include_toolbar"
@@ -19,6 +20,42 @@
         layout="@layout/included_screen_layout_navi_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <!-- 첫 번째 투명한 뷰 -->
+    <View
+        android:id="@+id/transparent_view_1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/transparent_view_2"
+        app:layout_constraintTop_toTopOf="@id/include_navi_bar"
+        app:layout_constraintBottom_toBottomOf="@id/include_navi_bar"
+        app:layout_constraintWidth_percent="0.33" />
+
+    <!-- 두 번째 투명한 뷰 -->
+    <View
+        android:id="@+id/transparent_view_2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintStart_toEndOf="@id/transparent_view_1"
+        app:layout_constraintEnd_toStartOf="@id/transparent_view_3"
+        app:layout_constraintTop_toTopOf="@id/include_navi_bar"
+        app:layout_constraintBottom_toBottomOf="@id/include_navi_bar"
+        app:layout_constraintWidth_percent="0.34" />
+
+    <!-- 세 번째 투명한 뷰 -->
+    <View
+        android:id="@+id/transparent_view_3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintStart_toEndOf="@id/transparent_view_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/include_navi_bar"
+        app:layout_constraintBottom_toBottomOf="@id/include_navi_bar"
+        app:layout_constraintWidth_percent="0.33" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
